--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,103 @@
   border-radius: 0.4rem;
   border:0px solid;
 }
+
+/* Filter Bar Styling */
+
+.filter-container {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  padding:1rem;
+  width:10rem;
+}
+.filter-container header {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 0;
+}
+
+/* Product Listin Page */
+.product-listing-page {
+  margin:1rem;
+}
+
+.products {
+  list-style: none;
+  display:flex;
+  flex-wrap: wrap;
+}
+.products li {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.go-to-cart {
+  color: white;
+  background-color: rgb(0, 76, 255);
+  border:0 solid;
+  padding:0.5rem;
+  margin: 1rem 0;
+}
+
+.add-to-cart {
+  color: white;
+  background-color: rgb(102, 101, 101);
+  border:0 solid;
+  padding:0.5rem;
+  margin: 1rem 0;
+}
+
+/* Login Page */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 15rem;
+  justify-content: center;
+  text-align: center;
+
+  padding: 1rem;
+
+  text-align: left;
+}
+.Main {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 30rem;
+  height: 25rem;
+  border: 1px solid rgb(168, 166, 166);
+  border-radius: 0.2rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.container input {
+  padding: 1rem 0;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  border: 1px solid rgb(194, 194, 194);
+  border-radius: 0.4rem;
+}
+.Main button {
+  padding: 0.7rem;
+  border: 1px solid transparent;
+  border-radius: 0.3rem;
+  background-color: rgba(16, 171, 243, 0.897);
+  color: white;
+  font-size: 1.3rem;
+}
+.Main a {
+  text-decoration: none;
+  color: rgba(16, 171, 243, 0.897);
+  padding: 0.5rem;
+}
+.body-container {
+  display:flex;
+  justify-content:center; 
+  margin-top:10rem;
+}
