--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,109 @@
   justify-content:center; 
   margin-top:10rem;
 }
+
+/* Product Card Page */
+
+.product-card-container {
+  display: flex;
+  flex-direction: row;
+  width: 50rem;
+  height: 20rem;
+  justify-content:space-evenly;
+  margin-top:10rem;
+  padding:2rem 0rem;
+  border:1px solid rgb(205, 205, 205);
+  border-radius: 1rem;
+  box-shadow: 0px 0px 4px 2px rgb(47, 47, 47);
+}
+.product-details-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding:1rem 0;
+}
+.price-with-flex-grow {
+  flex-grow: 1;
+}
+.quantity-container{
+  margin:1rem;
+}
+.quantity-container button{
+  border:1px solid rgb(211, 211, 211);
+  font-size: 1.5rem;
+  border-radius: 50%;
+  background-color: white;
+}
+.quantity-container span {
+  border:1px solid rgb(216, 216, 216);
+  padding:0 1rem;
+  margin:0 0.5rem;
+  font-size: larger;
+}
+.button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+/* Cart Page */
+.cart-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+
+.cart-list-container {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.cart-item-container img {
+  height: 100%;
+}
+.cart-item-container {
+  display: flex;
+  flex-direction: row;
+  width: 30rem;
+  height: 15rem;
+  justify-content: space-between;
+  margin:1rem;
+  border:1px solid rgb(191, 191, 191);
+  box-shadow: 0 0 5px 2px rgb(62, 62, 62);
+  border-radius: 0.4rem;
+}
+.cart-item-container .fa-trash {
+  align-self: center;
+  font-size: 1.5rem;
+  padding:0 1rem;
+}
+.cart-item-description {
+  display: flex;
+  flex-direction: column;
+}
+.bill-container {
+  display: flex;
+  flex-direction: column;
+  border:1px solid black;
+  box-shadow: 0 0 5px 2px rgb(73, 73, 73);
+  border-radius: 0.5rem;
+  padding:1rem 0.5rem;
+  text-align: left;
+  width: 30rem;
+  height: 50%;
+  font-size: 1.3rem;
+}
+.bill-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.bill-container button {
+  padding:0.7rem;
+  margin:0.5rem 1rem;
+  border:0 solid;
+  border-radius: 0.5rem;
+  background-color: rgb(0, 123, 255);
+  font-size: 1.5rem;
+  color: white;
+}
