--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,9 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  padding:1rem;
+  padding:1.5rem;
   width:10rem;
+  font-size: 1.4rem;
 }
 .filter-container header {
   display: flex;
@@ -85,6 +86,7 @@
 /* Product Listin Page */
 .product-listing-page {
   margin:1rem;
+  max-width: 80%;
 }
 
 .products {
