--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,31 @@
 .App {
   text-align: center;
+  overflow: overlay;
+}
+body {
+  overflow: overlay;
+}
+*::-webkit-scrollbar {
+  display: block;
+  width: 16px;
+}
+
+*::-webkit-scrollbar-button {
+  display: none;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #00000000;
+}
+
+*::-webkit-scrollbar-track-piece {
+  background-color: #00000000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #00000040;
+  border: 1px solid #ffffff40;
+  border-radius: 24px;
 }
 
 .App-logo {
@@ -76,6 +102,7 @@
   padding:1.5rem;
   width:10rem;
   font-size: 1.4rem;
+  margin-top:-5rem;
 }
 .filter-container header {
   display: flex;
