--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ body {
   margin: 1rem 0;
 }
 
-/* Product Listin Page */
+/* Product Listing Page */
 .product-listing-page {
   margin:1rem;
   max-width: 80%;
@@ -143,7 +143,19 @@ body {
   padding:0.5rem;
   margin: 1rem 0;
 }
-
+.wishlist {
+  color:red;
+  font-size: 1.5rem;
+  position: absolute;
+  padding:0.5rem;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-color: rgba(232, 227, 227, 0.991);
+}
+.wishlist:hover{
+  font-size: 2rem;
+  box-shadow: 0 0 4px 2px rgb(176, 176, 176);
+}
 /* Login Page */
 
 .container {
