--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ body {
 }
 .go-to-cart {
   color: white;
-  background-color: rgb(0, 76, 255);
+  background-color: rgb(57, 248, 255);
   border:0 solid;
   padding:0.5rem;
   margin: 1rem 0;
@@ -138,7 +138,14 @@ body {
 
 .add-to-cart {
   color: white;
-  background-color: rgb(102, 101, 101);
+  background-color: rgb(0, 76, 255);
+  border:0 solid;
+  padding:0.5rem;
+  margin: 1rem 0;
+}
+.remove-from-wishlist {
+  color: white;
+  background-color: rgb(222, 39, 39);
   border:0 solid;
   padding:0.5rem;
   margin: 1rem 0;
