--- a/src/App.css
+++ b/src/App.css
@@ -88,11 +88,22 @@ body {
 }
 .NavBar .fa-solid {
   margin:1rem;
+  font-size: 1.4rem;
 }
 .NavBar input {
   width: 15rem;
   border-radius: 0.4rem;
   border:0px solid;
+}
+.nav-container button {
+  border:0;
+  padding:0.5rem 1rem;
+  color: white;
+  background-color: black;
+  border-radius: 0.5rem;
+  font-size: 1.05rem;
+  margin-left:1rem;
+  margin-right:1rem ;
 }
 
 /* Filter Bar Styling */
