--- a/src/App.css
+++ b/src/App.css
@@ -163,16 +163,17 @@ body {
 }
 .wishlist {
   color:red;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   position: absolute;
   padding:0.5rem;
   border: 1px solid transparent;
   border-radius: 50%;
-  background-color: rgba(232, 227, 227, 0.991);
+  /* background-color: rgba(232, 227, 227, 0.991); */
 }
 .wishlist:hover{
-  font-size: 2rem;
-  box-shadow: 0 0 4px 2px rgb(176, 176, 176);
+  font-size: 2.4rem;
+  background-color: white;
+  box-shadow: 0 0 33px 2px rgb(0, 0, 0);
 }
 /* Login Page */
 
