--- a/src/App.css
+++ b/src/App.css
@@ -120,20 +120,21 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .search-container {
+  width: 33rem;
+  max-height: 40rem;
+  padding: 1rem;
+  z-index: 10000;
   position: absolute;
-  z-index: 100;
+  margin-top: 4rem;
+  background-color: var(--white-color);
   display: flex;
   flex-direction: column;
-  list-style: none;
-  border: 1px solid;
-  left: 38rem;
-  width: 35rem;
+  grid-gap: 1.5rem;
+  gap: 1.5rem;
   overflow-y: scroll;
-  height: 40rem;
-  margin-top: 4rem;
   background-color: white;
+  list-style: none;
 }
 /* Filter Bar Styling */
 
@@ -285,7 +286,7 @@ body {
 
 /* Product Card Page */
 
-.product-card-container {
+/* .product-card-container {
   display: flex;
   flex-direction: row;
   width: 50rem;
@@ -325,7 +326,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
+} */
 /* Cart Page */
 .cart-container {
   display: flex;
