--- a/src/pages/productListing/ProductPage.css
+++ b/src/pages/productListing/ProductPage.css
@@ -1,30 +1,51 @@
 .product-listing-page {
-    margin:1rem;
-    max-width: 80%;
-  }
-  
-  .products {
-    list-style: none;
-    display:flex;
-    flex-wrap: wrap;
-  }
-  .products li {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
-  }
-  .go-to-cart {
-    color: white;
-    background-color: rgb(0, 76, 255);
-    border:0 solid;
-    padding:0.5rem;
-    margin: 1rem 0;
-  }
-  
-  .add-to-cart {
-    color: white;
-    background-color: rgb(102, 101, 101);
-    border:0 solid;
-    padding:0.5rem;
-    margin: 1rem 0;
-  }
+  margin:1rem;
+  max-width: 80%;
+}
+
+.products {
+  list-style: none;
+  display:flex;
+  flex-wrap: wrap;
+}
+.products li {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.go-to-cart {
+  color: white;
+  background-color: rgb(57, 248, 255);
+  border:0 solid;
+  padding:0.5rem;
+  margin: 1rem 0;
+}
+
+.add-to-cart {
+  color: white;
+  background-color: rgb(0, 76, 255);
+  border:0 solid;
+  padding:0.5rem;
+  margin: 1rem 0;
+}
+.remove-from-wishlist {
+  color: white;
+  background-color: rgb(222, 39, 39);
+  border:0 solid;
+  padding:0.5rem;
+  margin: 1rem 0;
+}
+.wishlist {
+  color:red;
+  font-size: 1.8rem;
+  position: absolute;
+  padding:0.5rem;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  /* background-color: rgba(232, 227, 227, 0.991); */
+}
+.wishlist:hover{
+  font-size: 2.4rem;
+  background-color: white;
+  box-shadow: 0 0 33px 2px rgb(0, 0, 0);
+}
