--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,10 +1,3 @@
-.NavBar {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: rgb(230, 230, 230);
-    padding:1rem;
-  }
   .NavBar .fa-solid {
     margin:1rem;
   }
@@ -17,9 +10,10 @@
     display:flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: rgb(230, 230, 230);
+    background-color: #5eead4;
     padding:1rem;
     position: relative;
+    border-radius: 0 0 0.5rem 0.5rem;
   }
   .NavBar .fa-solid {
     margin:1rem;
