--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -64,3 +64,10 @@
     background-color: white;
     list-style: none;
   }
+  #explore-button {
+   color: black;
+   background-color: transparent;
+   font-weight: bold;
+   font-size: 1.4rem;
+   cursor: pointer;
+  }
