--- a/src/components/spinner.css
+++ b/src/components/spinner.css
@@ -13,4 +13,8 @@
     border-top: 10px solid #383636; /* Black */
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
+    position: fixed;
+    left: 48%;
+    right: 50%;
+    top:30%;
   }
