--- a/src/App.css
+++ b/src/App.css
@@ -78,29 +78,6 @@ body {
   margin: 1rem;
 }
 
-/* NavBar styling */
-
-
-
-/* Filter Bar Styling */
-
-/* Product Listin Page */
-
-/* Login Page */
-
-/* Product Card Page */
-
-/* .product-card-container {
-  display: flex;
-  flex-direction: row;
-  width: 50rem;
-  height: 20rem;
-  justify-content:space-evenly;
-  margin-top:10rem;
-  padding:2rem 0rem;
-  border:1px solid rgb(205, 205, 205);
-  border-radius: 1rem;
-  box-shadow: 0px 0px 4px 2px rgb(47, 47, 47);
-} */
-
-/* Cart Page */
+button,.fa-solid {
+  cursor: pointer;
+}
