--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,11 +1,3 @@
-  .NavBar .fa-solid {
-    margin:1rem;
-  }
-  .NavBar input {
-    width: 15rem;
-    border-radius: 0.4rem;
-    border:0px solid;
-  }
   .NavBar {
     display:flex;
     flex-direction: row;
@@ -22,10 +14,11 @@
   .NavBar input {
     border-radius: 0.4rem;
     border:0px solid;
-    font-size: 2rem;
+    font-size: 1.3rem;
     padding: 0.5rem 1rem;
     position: relative;
     width: 35rem;
+    margin-top: 0.5rem;
   }
   .nav-container button {
     border:0;
