--- a/src/components/filterBar/FilterBar.css
+++ b/src/components/filterBar/FilterBar.css
@@ -12,3 +12,10 @@
     justify-content: space-between;
     margin: 1rem 0;
   }
+  .filter-container input,.filter-container label {
+    cursor: pointer;
+  }
+  .rating-label {
+    display: flex;
+    justify-content: space-between;
+  }
