--- a/src/pages/productListing/ProductPage.css
+++ b/src/pages/productListing/ProductPage.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   margin: 1rem;
+  cursor: pointer;
 }
 .go-to-cart {
   color: white;
@@ -48,4 +49,14 @@
   font-size: 2.4rem;
   background-color: white;
   box-shadow: 0 0 33px 2px rgb(0, 0, 0);
+}
+.title-rating-container {
+  display: flex;
+  justify-content: space-between;
+}
+#product-title {
+  font-size: 1.15rem;
+}
+.title-rating-container p {
+  align-self: center;
 }
