refactor: empty cart message
message will be shown on empty cart and empty wishlist

--- a/src/pages/productListing/ProductPage.css
+++ b/src/pages/productListing/ProductPage.css
@@ -16,7 +16,7 @@
 }
 .go-to-cart {
   color: white;
-  background-color: rgb(57, 248, 255);
+  background-color: #5eead4;
   border:0 solid;
   padding:0.5rem;
   margin: 1rem 0;
