--- a/src/pages/loginAndSignup/LoginAndSignUp.css
+++ b/src/pages/loginAndSignup/LoginAndSignUp.css
@@ -42,7 +42,7 @@
   color: white;
   font-size: 1.3rem;
 }
-.Main a {
+.Main span, .Main a {
   text-decoration: none;
   color: rgba(16, 171, 243, 0.897);
   padding: 0.5rem;
