--- a/src/pages/addressPage/AddressPage.css
+++ b/src/pages/addressPage/AddressPage.css
@@ -101,6 +101,7 @@
     align-self: center;
     font-size: 1.5rem;
     padding:0 1rem;
+    margin:1.5rem 0;
   }
   .add-new-address {
     display: flex;
@@ -122,4 +123,9 @@
 }
 .address {
     margin-top: 1rem;
+}
+.address-icons-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
